# byte-span

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  vcpkg.json
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
cmake/find/: Findinspector.cmake
include/byte_span/: byte_span.hpp
include/lsm-tree/: byte_span.hpp  byte_view.hpp  lsm-tree.hpp
test/: CMakeLists.txt
test/source/: basic_byte_span_1_test.cpp  basic_byte_span_2_test.cpp  basic_byte_span_ctad_test.cpp  byte_span_1_test.cpp  byte_span_2_test.cpp  byte_span_3_range_test.cpp  byte_span_4_constexpr_test.cpp  byte_span_ctad_test.cpp  byte_span_test.cpp  byte_view_test.cpp  lsm-tree_test.cpp
